Some minor changes

--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
             <h1>Kishore Anand</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>Aspiring web developer with foundational skills in HTML,CSS, and
-                JavaScript, eager to expand proficiency. Proficient at a beginner level in C and
+                JavaScript, eager to expand proficiency. Proficient at a beginner level in Java and
                 Python, seeking opportunities to enhance expertise.</p>
             <div class="social-media">
                 <a href="https://linkedin.com/in/kishoreanandr" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://github.com/kishoreanandr" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <!-- <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a> -->
+
                 <a href="https://api.whatsapp.com/send?phone=6380679644&text=Hello Kishore..!" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
             <a href="Kishore Anand Resume.pdf" class="btn" target="_blank" download="resume.pdf">Resume</a>
@@ -79,14 +78,14 @@
             <div class="projects-box" >
                 <i class="fa-solid fa-code"></i>
                 <h3>Web Development</h3>
-                <p>Intermediate web developer adept in HTML, CSS, JavaScript, MySQL, and PHP, crafting dynamic web experiences with passion.</p>
+                <p>Intermediate web developer adept in React,HTML, CSS, JavaScript, MySQL, and PHP, crafting dynamic web experiences with passion.</p>
                 <!-- <a href="#" class="btn">Read More</a> -->
             </div>
 
             <div class="projects-box" >
                 <i class="fa-solid fa-palette" ></i>
                 <h3>Programming</h3>
-                <p>Intermediate-level problem solver in C and Python, with a focus on problem-solving.</p>
+                <p>Intermediate-level problem solver in Java and Python, with a focus on problem-solving.</p>
                 <!-- <a href="#" class="btn">Read More</a> -->
             </div>
             
@@ -139,32 +138,6 @@
                 </a>
             </div>
 
-            <!-- <div class="portfolio-box" data-aos="fade-down-right" >
-                <img src="imgs/4.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, provident.</p>
-                    <i class="fa-solid fa-up-right-from-square"></i>
-                </div>
-            </div>
-
-            <div class="portfolio-box" data-aos="zoom-in-up">
-                <img src="imgs/5.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, provident.</p>
-                    <i class="fa-solid fa-up-right-from-square"></i>
-                </div>
-            </div>
-
-            <div class="portfolio-box" data-aos="fade-down-left">
-                <img src="imgs/5.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, provident.</p>
-                    <i class="fa-solid fa-up-right-from-square"></i>
-                </div>
-            </div> -->
        </div>
     </section>
 
