--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="about-content" data-aos="fade-down-left">
             <h2 class="heading">About <span>Me</span></h2>
             <!-- <h3>Frontend Developer</h3> -->
-            <p>"I am Kishore Anand R, a final year student pursuing a Bachelor's degree in Electronics and Communication Engineering at Kongu Engineering College. My passion lies in web development, and I have a proficient understanding of C and Python at a beginner level. I am eager to explore opportunities that allow me to further develop my skills and expertise. My portfolio showcases my work in these fields, demonstrating how I utilize my interests to create impactful projects."</p>
+            <p>"I am Kishore Anand R, a final year student pursuing a Bachelor's degree in Electronics and Communication Engineering at Kongu Engineering College. My passion lies in web development, and I have a proficient understanding of Java and Python at a beginner level. I am eager to explore opportunities that allow me to further develop my skills and expertise. My portfolio showcases my work in these fields, demonstrating how I utilize my interests to create impactful projects."</p>
             <!-- <a href="#" class="btn">Read More</a> -->
         </div>
     </section>
