Some minor changes added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>Kishore Anand</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>Aspiring web developer with foundational skills in HTML,CSS, and
-                JavaScript, eager to expand proficiency. Proficient at a beginner level in Java and
+                JavaScript, eager to expand proficiency. Proficient at a Intermediate level in Java and
                 Python, seeking opportunities to enhance expertise.</p>
             <div class="social-media">
                 <a href="https://linkedin.com/in/kishoreanandr" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -47,7 +47,7 @@
 
                 <a href="https://api.whatsapp.com/send?phone=6380679644&text=Hello Kishore..!" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
-            <a href="Kishore Anand Resume.pdf" class="btn" target="_blank" download="resume.pdf">Resume</a>
+            <a href="KISHORE ANAND RESUME.pdf" class="btn" target="_blank" download="Kishore Resume.pdf">Resume</a>
         </div>
 
         <div class="home-img">
@@ -64,7 +64,7 @@
         <div class="about-content" data-aos="fade-down-left">
             <h2 class="heading">About <span>Me</span></h2>
             <!-- <h3>Frontend Developer</h3> -->
-            <p>"I am Kishore Anand R, a final year student pursuing a Bachelor's degree in Electronics and Communication Engineering at Kongu Engineering College. My passion lies in web development, and I have a proficient understanding of Java and Python at a beginner level. I am eager to explore opportunities that allow me to further develop my skills and expertise. My portfolio showcases my work in these fields, demonstrating how I utilize my interests to create impactful projects."</p>
+            <p>"I am Kishore Anand R, a final year student pursuing a Bachelor's degree in Electronics and Communication Engineering at Kongu Engineering College. My passion lies in web development, and I have a proficient understanding of Java and Python at a Intermediate level. I am eager to explore opportunities that allow me to further develop my skills and expertise. My portfolio showcases my work in these fields, demonstrating how I utilize my interests to create impactful projects."</p>
             <!-- <a href="#" class="btn">Read More</a> -->
         </div>
     </section>
