--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1>Hi, Myself</h1>
             <h1>Kishore Anand</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
-            <p>Aspiring web developer with foundational skills in HTML,CSS, and
+            <p>Aspiring web developer with foundational skills in React JS,HTML,CSS, and
                 JavaScript, eager to expand proficiency. Proficient at a Intermediate level in Java and
                 Python, seeking opportunities to enhance expertise.</p>
             <div class="social-media">
@@ -51,7 +51,7 @@
         </div>
 
         <div class="home-img">
-            <img src="imgs/profiledp .jpg" alt="">
+            <img src="imgs/profile dp.jpg" alt="">
         </div>
     </section>
 
@@ -59,7 +59,7 @@
     <!--About Section Design-->
     <section class="about" id="about" >
         <div class="about-img" data-aos="fade-down-right">
-            <img src="imgs/profiledp .jpg" alt="">
+            <img src="imgs/profile dp.jpg" alt="">
         </div>
         <div class="about-content" data-aos="fade-down-left">
             <h2 class="heading">About <span>Me</span></h2>
@@ -78,7 +78,7 @@
             <div class="projects-box" >
                 <i class="fa-solid fa-code"></i>
                 <h3>Web Development</h3>
-                <p>Intermediate web developer adept in React,HTML, CSS, JavaScript, MySQL, and PHP, crafting dynamic web experiences with passion.</p>
+                <p>Intermediate web developer adept in React,HTML, CSS, JavaScript, MySQL, and PHP crafting dynamic web experiences with passion.</p>
                 <!-- <a href="#" class="btn">Read More</a> -->
             </div>
 
