New Project added

--- a/index.html
+++ b/index.html
@@ -137,6 +137,16 @@
                 </div>
                 </a>
             </div>
+            <div class="portfolio-box" data-aos="fade-down-left">
+                <img src="imgs/IMG_0973.jpeg" alt="">
+                <a href="https://github.com/kishoreanandr/phishing_attack_detection.git" target="_blank">
+                <div class="portfolio-layer">
+                    <h4>Phishing Attack Detection</h4>
+                    <p>Developed a Hybrid Optimization Model for Phishing Website Detection</p>
+                    <i class="fa-solid fa-up-right-from-square"></i>
+                </div>
+                </a>
+            </div>
 
        </div>
     </section>
