--- a/index.html
+++ b/index.html
@@ -137,12 +137,25 @@
                 </div>
                 </a>
             </div>
+
+            
             <div class="portfolio-box" data-aos="fade-down-left">
-                <img src="imgs/IMG_0973.jpeg" alt="">
+                <img src="imgs/Phishing_Detection.jpeg" alt="">
                 <a href="https://github.com/kishoreanandr/phishing_attack_detection.git" target="_blank">
                 <div class="portfolio-layer">
                     <h4>Phishing Attack Detection</h4>
                     <p>Developed a Hybrid Optimization Model for Phishing Website Detection</p>
+                    <i class="fa-solid fa-up-right-from-square"></i>
+                </div>
+                </a>
+            </div>
+
+            <div class="portfolio-box" data-aos="fade-down-left">
+                <img src="imgs/E-commerce.jpeg" alt="">
+                <a href="https://github.com/kishoreanandr/E-Commerce-website-react.git" target="_blank">
+                <div class="portfolio-layer">
+                    <h4>E-commerce Website</h4>
+                    <p>Designed and developed the front-end for an e-commerce website using React Js</p>
                     <i class="fa-solid fa-up-right-from-square"></i>
                 </div>
                 </a>
