--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="social-media">
                 <a href="https://linkedin.com/in/kishoreanandr" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://github.com/kishoreanandr" target="_blank"><i class="fa-brands fa-github"></i></a>
-
+                <a href="https://leetcode.com/u/kishoreanand21/" target="_blank"><i class="fa-solid fa-code"></i></a>
                 <a href="https://api.whatsapp.com/send?phone=6380679644&text=Hello Kishore..!" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
             <a href="KISHORE ANAND RESUME.pdf" class="btn" target="_blank" download="Kishore Resume.pdf">Resume</a>
